# PharmaRAG

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  RUNBOOK.md  pyproject.toml
.github/workflows/: ci.yml
app/: main.py  theme.py
docs/: model_card.md
docs/adr/: 007-openfda-table-fidelity.md  007-spike-raw.json  README.md
eval/: README.md  __init__.py  autogen.py  autolabel.py  calibrate.py  candidates.py  ddinter.py  labeling_app.py  metrics.py  review_app.py  run_eval.py  schema.py
scripts/: build_corpus_1000.py  build_entities.py  build_graph.py  build_index.py  dailymed.py  dbq.py  diagnose_retrieval.py  start_qdrant.ps1  verify_corpus.py
src/pharmarag/: audit.py  cache.py  config.py  dedup.py  http.py  intent.py  pipeline.py  tokens.py
src/pharmarag/api/: main.py
src/pharmarag/chunking/: chunker.py  metadata.py
src/pharmarag/db/: __init__.py  schema.sql
src/pharmarag/embed/: client.py  prefix.py
src/pharmarag/entity/: brands.py  gazetteer.py  lasa.py  resolve.py
src/pharmarag/generate/: context.py  schema.py  synthesize.py
src/pharmarag/graph/: build.py  rxclass.py  traverse.py
src/pharmarag/guardrails/: citations.py  dose.py  grounding.py  input_guard.py  lasa_gate.py
src/pharmarag/index/: store.py  upsert.py
src/pharmarag/ingest/: dailymed.py  select.py  selection.py  spike.py
src/pharmarag/orchestrate/: graph.py  nodes.py
src/pharmarag/rerank/: reranker.py
src/pharmarag/retrieve/: search.py
tests/: test_additive_risk.py  test_adr_guards.py  test_chunk_invariants.py  test_context_ordering.py  test_eval.py  test_grounding_and_cache.py  test_guardrails.py  test_llm_judge.py  test_selection.py  test_table_linearization.py
tests/fixtures/: sample_spl.xml
